[metadata]
name = PyTrackBead
description = Python wrapper of V. Croquette bead tarcking
long_description = file: README.md
long_description_content_type = text/markdown
author = Martin Rieu
author_email = martin.rieu@physics.ox.ac.uk
license = MIT
platforms = linux
url = https://github.com/Mriv31/PyTrackBead

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    ninja		 
    numpy
    nptyping
    toml
    types-toml
    opencv-python
    cmake_build_extension
    
[options.extras_require]
test =
    pytest
    pytest-icdiff
all =
    %(test)s


